k8s/flux/cluster/apps/security/infisical/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical-web
  namespace: infisical
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: infisical-standalone
  type: ClusterIP
